--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,4 +1,5 @@
-
+[[metadata.heroku]]
+  root-package = "github.com/guiceolin/minigo"
 # Gopkg.toml example
 #
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
@@ -19,4 +20,3 @@
 # [[override]]
 #  name = "github.com/x/y"
 #  version = "2.4.0"
-
